Changes for Filter Effects specification
----------------------------------------
2012-11-06  Dirk Schulze  <dschulze@adobe.com>
- Add interface defintion for feDropShadow.

2012-11-06  Dirk Schulze  <dschulze@adobe.com>
- Cleanup interface code and auto generate links.
- Remove ImageData interface and link to context2d (WD).

2012-11-05  Dirk Schulze  <dschulze@adobe.com>
- Start porting interface to WebIDL and SVG2.

2012-11-05  Dirk Schulze  <dschulze@adobe.com>
- Add 'feCustomParam' to add multiple parameters of different types.

2012-10-25  Dirk Schulze  <dschulze@adobe.com>
- Removed reference to RelaxNG. We use WebIDL for the interfaces. No validation code.
- Remove note about naming 'cudtom()', 'shader()'
- Remve feUnsharpen for now. Opened bug report if we want to have it later.
- Removed unspecified short hand functions. Opened bug report.
- Removed issue about new code for feTurbulence. We won't change the code in Filter Effects.
- Remve feDiffuseSpecularElement for now. Opened bug report if we want to have it later.

2012-10-21  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (9).

2012-10-03  Dirk Schulze  <dschulze@adobe.com>
- Modified note to issue to support more shading languages.
- Added normative references to GLSL ES and WebGL specs.

2012-08-20  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (8).

2012-08-20  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (7).

2012-08-20  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (6).

2012-08-18  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (5).

2012-08-18  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (4).

2012-08-17  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (3).

2012-08-17  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (2).

2012-08-17  Dirk Schulze  <dschulze@adobe.com>
- Preparation for publication (1).
