@@ -1486,51 +1486,70 @@ primitives:</p>
 <p><em>Attribute definitions:</em></p>
 <dl>
   <dt id="FilterPrimitiveXAttribute">
-  <span class="adef">x</span> = "<em><a>&lt;coordinate&gt;</a></em>"</dt>
-    <dd><p>
-  The minimum x coordinate for the subregion which restricts
-      calculation and rendering of the given <a>filter primitive</a>. See <a>filter primitive subregion</a>.</p>
+    <span class="adef">x</span> = "<em><a>&lt;coordinate&gt;</a></em>"
+  </dt>
+  <dd>
     <p>
-  The <a>lacuna value</a> for <span class="attr-name">x</span> is <span class="attr-value">0%</span>.</p>
-        <p><span class="anim-target">Animatable: yes.</span></p>
+      The minimum x coordinate for the subregion which restricts calculation and rendering of the given <a>filter
+      primitive</a>. See <a>filter primitive subregion</a>.
+    </p>
+    <p>
+      The <a>lacuna value</a> for <span class="attr-name">x</span> is <span class="attr-value">0%</span>.
+    </p>
+    <p><span class="anim-target">Animatable: yes.</span></p>
   </dd>
   <dt id="FilterPrimitiveYAttribute">
-  <span class="adef">y</span> = "<em><a>&lt;coordinate&gt;</a></em>"</dt>
-    <dd><p>
-  The minimum y coordinate for the subregion which restricts
-      calculation and rendering of the given <a>filter primitive</a>. See <a>filter primitive subregion</a>. </p>
+    <span class="adef">y</span> = "<em><a>&lt;coordinate&gt;</a></em>"
+  </dt>
+  <dd>
     <p>
-  The <a>lacuna value</a> for <span class="attr-name">y</span> is <span class="attr-value">0%</span>.</p>
-        <p><span class="anim-target">Animatable: yes.</span></p>
+      The minimum y coordinate for the subregion which restricts calculation and rendering of the given <a>filter
+      primitive</a>. See <a>filter primitive subregion</a>.
+    </p>
+    <p>
+      The <a>lacuna value</a> for <span class="attr-name">y</span> is <span class="attr-value">0%</span>.
+    </p>
+    <p><span class="anim-target">Animatable: yes.</span></p>
   </dd>
   <dt id="FilterPrimitiveWidthAttribute">
-  <span class="adef">width</span> = "<em><a>&lt;length&gt;</a></em>"</dt>
-    <dd><p>
-  The width of the subregion which restricts calculation and rendering
-      of the given <a>filter primitive</a>. See <a>filter primitive subregion</a>.</p>
-      <p>
-  A negative or zero value disables the effect of the given filter
-      primitive (i.e., the result is a transparent black image).</p>
+    <span class="adef">width</span> = "<em><a>&lt;length&gt;</a></em>"
+  </dt>
+  <dd>
     <p>
-  The <a>lacuna value</a> for <span class="attr-name">width</span> is <span class="attr-value">100%</span>.</p>
-      <p><span class="anim-target">Animatable: yes.</span></p>
+      The width of the subregion which restricts calculation and rendering of the given <a>filter primitive</a>. See
+      <a>filter primitive subregion</a>.
+    </p>
+    <p>
+      A negative or zero value disables the effect of the given filter primitive (i.e., the result is a transparent
+      black image).
+    </p>
+    <p>
+      The <a>lacuna value</a> for <span class="attr-name">width</span> is <span class="attr-value">100%</span>.
+    </p>
+    <p><span class="anim-target">Animatable: yes.</span></p>
   </dd>
   <dt id="FilterPrimitiveHeightAttribute">
-  <span class="adef">height</span> = "<em><a>&lt;length&gt;</a></em>"</dt>
-    <dd><p>
-  The height of the subregion which restricts calculation and rendering
-      of the given <a>filter primitive</a>. See <a>filter primitive subregion</a>.</p>
-      <p>
-  A negative or zero value disables the effect of the given filter
-      primitive (i.e., the result is a transparent black image).</p>
+    <span class="adef">height</span> = "<em><a>&lt;length&gt;</a></em>"
+  </dt>
+  <dd>
     <p>
-  The <a>lacuna value</a> for <span class="attr-name">height</span> is <span class="attr-value">100%</span>.</p>
-      <p><span class="anim-target">Animatable: yes.</span></p>
+      The height of the subregion which restricts calculation and rendering of the given <a>filter primitive</a>. See
+      <a>filter primitive subregion</a>.
+    </p>
+    <p>
+      A negative or zero value disables the effect of the given filter primitive (i.e., the result is a transparent
+      black image).
+    </p>
+    <p>
+      The <a>lacuna value</a> for <span class="attr-name">height</span> is <span class="attr-value">100%</span>.
+    </p>
+    <p><span class="anim-target">Animatable: yes.</span></p>
   </dd>
   <dt id="FilterPrimitiveResultAttribute">
-  <span class="adef">result</span> =
-  "<em><dfn>&lt;filter-primitive-reference&gt;</dfn></em>"</dt>
-    <dd><p>
+    <span class="adef">result</span> = "<em><dfn>&lt;filter-primitive-reference&gt;</dfn></em>"
+  </dt>
+  <dd>
+    <p>
       &lt;filter-primitive-reference&gt; is an <a href="">&lt;author-ident&gt;</a> and an assigned name for this
       <a>filter primitive</a>. If supplied, then graphics
       that result from processing this <a>filter primitive</a> can be referenced by
@@ -1538,116 +1557,93 @@ primitives:</p>
       primitive within the same <a>'filter element'</a> element. If no value is
       provided, the output will only be available for re-use as the implicit
       input into the next <a>filter primitive</a> if that <a>filter primitive</a> provides
-      no value for its <a>'in'</a> attribute.</p>
+      no value for its <a>'in'</a> attribute.
+    </p>
   </dd>
   <dt id="FilterPrimitiveInAttribute">
-  <span class="adef">in</span> = "<em><a>SourceGraphic</a> | <a>SourceAlpha</a> | <a>BackgroundImage</a> | <a>BackgroundAlpha</a> | <a>FillPaint</a> | <a>StrokePaint</a> |
-  <a>&lt;filter-primitive-reference&gt;</a></em>"</dt>
-    <dd><p>
-  Identifies input for the given filter primitive. The value can be
-      either one of six keywords or can be a string which matches a previous
-      <a>'feBlend/result'</a> attribute value within the same <a>'filter element'</a>
-      element. If no value is provided and this is the first <a>filter primitive</a>, 
-  then this <a>filter primitive</a> will use <a>SourceGraphic</a>
-      as its input. If no value is provided and this is a subsequent <a>filter primitive</a>, 
-  then this <a>filter primitive</a> will use the result from the
-      previous <a>filter primitive</a> as its input.</p> 
-      <p>
-  If the value for <span class="attr-name">result</span> appears
-      multiple times within a given <a>'filter element'</a> element, then a reference to
-      that result will use the closest preceding <a>filter primitive</a> with the
-      given value for attribute <a>'feBlend/result'</a>.
-      Forward references to results are not allowed, and will be treated as
-      if no result was specified. </p>
-      <p>
-  Definitions for the six keywords: </p>
-      <dl>
-        <dt id="SourceGraphic"><span class="attr-value">SourceGraphic</span></dt>
-          <dd><p>
-  This keyword represents the graphics elements
-            that were the original input into the <a>'filter element'</a> element. For raster
-            effects <a>filter primitives</a>, the graphics elements
-            will be rasterized into an initially clear RGBA raster in image
-            space. Pixels left untouched by the original graphic will be left
-            clear. The image is specified to be rendered in linear RGBA
-            pixels. The alpha channel of this image captures any
-            anti-aliasing specified by SVG. (Since the raster is linear, the
-            alpha channel of this image will represent the exact percent
-            coverage of each pixel.)</p></dd>
-        <dt id="SourceAlpha"><span class="attr-value">SourceAlpha</span></dt>
-          <dd><p>
-  This keyword represents the graphics elements
-            that were the original input into the <a>'filter element'</a> element. 
-      <a>SourceAlpha</a> has all of the same rules
-            as <a>SourceGraphic</a> except that only the
-            alpha channel is used. The input image is an RGBA image
-            consisting of implicitly black color values for the RGB channels,
-            but whose alpha channel is the same as <a>SourceGraphic</a>.</p>
-      <p class="note implementation">If this option is
-            used, then some implementations might need to rasterize the
-            graphics elements
-            in order to extract the alpha channel.</p>
-    </dd>
-        <dt id="BackgroundImage"><span class="attr-value">BackgroundImage</span></dt>
-          <dd><p>
-  This keyword represents an image snapshot of the canvas under
-            the <a>filter region</a> at the time that the <a>'filter element'</a> element was invoked. See
-            <a href="#AccessingBackgroundImage">accessing the background
-            image</a>.</p>
-      </dd>
-        <dt id="BackgroundAlpha"><span class="attr-value">BackgroundAlpha</span></dt>
-          <dd><p>
-  Same as <a>BackgroundImage</a> except
-            only the alpha channel is used. See <a>SourceAlpha</a> and <a
-            href="#AccessingBackgroundImage">accessing the background
-            image</a>.</p>
-      </dd>
-
-        <dt id="FillPaint"><span class="attr-value">FillPaint</span></dt>
-          <dd>
-      <p>
-  This keyword represents the target element <i>rendered filled</i>.</p>
-      <p>
-  For svg this keyword represents the value of the <a>'fill'</a>
-            property on the target element for the filter effect.</p>
-      <p>
-  For non-SVG cases <a>FillPaint</a> generates a transparent black image.
-      </p>
-      <p class="issue">
-        Consider whether this should be e.g the <span class="term">bounding client rect</spam> filled with the current color, or if it makes sense to use the 'fill' property for this case too.
-      </p>
-      <p class="note authoring">Note that text is generally painted filled, not stroked.</p>
-      <p>
-  The <a>FillPaint</a> image has conceptually infinite extent. 
-      Frequently this image is opaque everywhere, but it might not be if the "paint"
-      itself has alpha, as in the case of a gradient or pattern which
-      itself includes transparent or semi-transparent parts.</p>
-      </dd>
-        <dt id="StrokePaint"><span class="attr-value">StrokePaint</span></dt>
-          <dd>
-      <p>
-  This keyword represents the target element <i>rendered stroked</i>.</p>
-      <p>
-  For svg this keyword represents the value of the <a>'stroke'</a>
-         on the target element for the filter effect.</p>
-      <p>
-  For non-SVG cases <a>StrokePaint</a> generates a transparent black image. 
-      </p>
-      <p class="issue">Consider whether this should be e.g the <span class="term">bounding client rect</spam> filled with the one of the border colors, or if it makes sense to use the 'stroke' property for this case too.
-      </p>
-      <p class="note authoring">Note that text is generally painted filled, not stroked.</p>
+    <span class="adef">in</span> = "<em><a>SourceGraphic</a> | <a>SourceAlpha</a> | <a>BackgroundImage</a> |
+    <a>BackgroundAlpha</a> | <a>FillPaint</a> | <a>StrokePaint</a> | <a>&lt;filter-primitive-reference&gt;</a></em>"
+  </dt>
+  <dd>
+    <p>
+      Identifies input for the given filter primitive. The value can be either one of six keywords or can be a string
+      which matches a previous <a>'feBlend/result'</a> attribute value within the same <a>'filter element'</a>
+      element. If no value is provided and this is the first <a>filter primitive</a>, then this <a>filter primitive</a>
+      will use <a>SourceGraphic</a> as its input. If no value is provided and this is a subsequent <a>filter
+      primitive</a>, then this <a>filter primitive</a> will use the result from the previous <a>filter primitive</a> as
+      its input.
+    </p> 
+    <p>
+      If the value for <span class="attr-name">result</span> appears multiple times within a given <a>'filter
+      element'</a> element, then a reference to that result will use the closest preceding <a>filter primitive</a> with
+      the given value for attribute <a>'feBlend/result'</a>. Forward references to results are not allowed, and will be
+      treated as if no result was specified.
+    </p>
+    <p>
+      Definitions for the six keywords:
+    </p>
+    <dl>
+      <dt id="SourceGraphic"><span class="attr-value">SourceGraphic</span></dt>
+      <dd>
         <p>
-  The <a>StrokePaint</a> image has conceptually infinite extent.
-      Frequently this image is opaque everywhere, but it 
-      might not be if the "paint"
-      itself has alpha, as in the case of a gradient or pattern which
-      itself includes transparent or semi-transparent parts.
-      </p>
+          This keyword represents the graphics elements that were the original input into the <a>'filter element'</a>
+          element. For raster effects <a>filter primitives</a>, the graphics elements will be rasterized into an
+          initially clear RGBA raster in image space. Pixels left untouched by the original graphic will be left clear.
+          The image is specified to be rendered in linear RGBA pixels. The alpha channel of this image captures any
+          anti-aliasing specified by SVG. (Since the raster is linear, the alpha channel of this image will represent
+          the exact percent coverage of each pixel.)
+        </p>
       </dd>
-        </dl>
-      <p><span class="anim-target">Animatable: yes.</span></p>
+      <dt id="SourceAlpha"><span class="attr-value">SourceAlpha</span></dt>
+      <dd>
+        <p>
+          This keyword represents the graphics elements that were the original input into the <a>'filter element'</a>
+          element. <a>SourceAlpha</a> has all of the same rules as <a>SourceGraphic</a> except that only the alpha
+          channel is used. The input image is an RGBA image consisting of implicitly black color values for the RGB
+          channels, but whose alpha channel is the same as <a>SourceGraphic</a>.
+        </p>
+        <p class="note implementation">
+          If this option is used, then some implementations might need to rasterize the graphics elements in order to
+          extract the alpha channel.
+        </p>
+      </dd>
+      <dt id="BackgroundImage"><span class="attr-value">BackgroundImage</span></dt>
+      <dd>
+        <p>
+          This keyword represents an image snapshot of the canvas under the <a>filter region</a> at the time that the
+          <a>'filter element'</a> element was invoked. See
+          <a href="#AccessingBackgroundImage">accessing the background image</a>.
+        </p>
+      </dd>
+      <dt id="BackgroundAlpha"><span class="attr-value">BackgroundAlpha</span></dt>
+      <dd>
+        <p>
+          Same as <a>BackgroundImage</a> except only the alpha channel is used. See <a>SourceAlpha</a> and <a
+          href="#AccessingBackgroundImage">accessing the background image</a>.
+        </p>
+      </dd>
+      <dt id="FillPaint"><span class="attr-value">FillPaint</span></dt>
+      <dd>
+        <p>
+          This keyword represents the value of the <a>'fill'</a> property on the target element for the filter effect.
+          The <a>FillPaint</a> image has conceptually infinite extent. Frequently this image is opaque everywhere, but
+          it might not be if the "paint" itself has alpha, as in the case of a gradient or pattern which itself includes
+          transparent or semi-transparent parts.
+        </p>
+      </dd>
+      <dt id="StrokePaint"><span class="attr-value">StrokePaint</span></dt>
+      <dd>
+        <p>
+          This keyword represents the value of the <a>'stroke'</a> property on the target element for the filter effect.
+          The <a>StrokePaint</a> image has conceptually infinite extent. Frequently this image is opaque everywhere, but
+          it might not be if the "paint" itself has alpha, as in the case of a gradient or pattern which itself includes
+          transparent or semi-transparent parts.
+        </p>
+      </dd>
+    </dl>
+    <p><span class="anim-target">Animatable: yes.</span></p>
   </dd>
-  </dl>
+</dl>
 </div>
 
 <h3 id="FilterPrimitiveSubRegion">Filter primitive subregion</h3>
