@@ -11,13 +11,13 @@
    rel=dcterms.rights>
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2012-11-06 name=dcterms.issued>
+  <meta content=2012-11-07 name=dcterms.issued>
   <meta content="Vincent Hardy" name=dcterms.creator>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
   <meta content=W3C name=dcterms.publisher>
-  <meta content="http://www.w3.org/TR/2012/ED-filter-effects-20121106/"
+  <meta content="http://www.w3.org/TR/2012/ED-filter-effects-20121107/"
    name=dcterms.identifier>
   <meta content="text/html; charset=UTF-8" http-equiv=content-type>
   <link href="style/default.css" rel=stylesheet type="text/css">
@@ -48,7 +48,7 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 6 November
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 7 November
     2012</h2>
 
    <dl>
@@ -56,7 +56,7 @@
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-     <!--http://www.w3.org/TR/2012/WD-filter-effects-20121106/-->
+     <!--http://www.w3.org/TR/2012/WD-filter-effects-20121107/-->
 
     <dt>Latest version:
 
@@ -2501,9 +2501,9 @@
 
     <dd>
      <p> The minimum x coordinate for the subregion which restricts
-      calculation and rendering of the given <a
-      href="#TermFilterPrimitiveElement">filter primitive</a>. See <a
-      href="#FilterPrimitiveSubRegion">filter primitive subregion</a>.
+      calculation and rendering of the given <span class=xxx>filter
+      primitive</span>. See <a href="#FilterPrimitiveSubRegion">filter
+      primitive subregion</a>.
 
      <p> The <a
       href="http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermLacunaValue">lacuna
@@ -2517,9 +2517,9 @@
 
     <dd>
      <p> The minimum y coordinate for the subregion which restricts
-      calculation and rendering of the given <a
-      href="#TermFilterPrimitiveElement">filter primitive</a>. See <a
-      href="#FilterPrimitiveSubRegion">filter primitive subregion</a>.
+      calculation and rendering of the given <span class=xxx>filter
+      primitive</span>. See <a href="#FilterPrimitiveSubRegion">filter
+      primitive subregion</a>.
 
      <p> The <a
       href="http://www.w3.org/TR/2008/REC-SVGTiny12-20081222/intro.html#TermLacunaValue">lacuna
@@ -2610,18 +2610,17 @@
       and this is the first <a href="#TermFilterPrimitiveElement">filter
       primitive</a>, then this <a href="#TermFilterPrimitiveElement">filter
       primitive</a> will use <a href="#SourceGraphic">SourceGraphic</a> as
-      its input. If no value is provided and this is a subsequent <a
-      href="#TermFilterPrimitiveElement">filter primitive</a>, then this <a
+      its input. If no value is provided and this is a subsequent <span
+      class=xxx>filter primitive</span>, then this <a
       href="#TermFilterPrimitiveElement">filter primitive</a> will use the
       result from the previous <a href="#TermFilterPrimitiveElement">filter
       primitive</a> as its input.
 
      <p> If the value for <span class=attr-name>result</span> appears
-      multiple times within a given <a class=element-name
-      href="#FilterElement">‘<code class=property>filter</code>’</a>
-      element, then a reference to that result will use the closest preceding
-      <a href="#TermFilterPrimitiveElement">filter primitive</a> with the
-      given value for attribute <a class=attr-name
+      multiple times within a given <span class=xxx>‘<code class=css>filter
+      element</code>’</span> element, then a reference to that result will
+      use the closest preceding <a href="#TermFilterPrimitiveElement">filter
+      primitive</a> with the given value for attribute <a class=attr-name
       href="#FilterPrimitiveResultAttribute">‘<code
       class=property>result</code>’</a>. Forward references to results are
       not allowed, and will be treated as if no result was specified.
@@ -2658,7 +2657,7 @@
         whose alpha channel is the same as <a
         href="#SourceGraphic">SourceGraphic</a>.
 
-       <p class="note implementation">If this option is used, then some
+       <p class="note implementation"> If this option is used, then some
         implementations might need to rasterize the graphics elements in
         order to extract the alpha channel.
 
@@ -2682,58 +2681,26 @@
       <dt id=FillPaint><span class=attr-value>FillPaint</span>
 
       <dd>
-       <p> This keyword represents the target element <i>rendered filled</i>.
-
-       <p> For svg this keyword represents the value of the <a
-        class=attr-name
+       <p> This keyword represents the value of the <a class=attr-name
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/animate.html#FillAttribute">‘<code
         class=property>fill</code>’</a> property on the target element for
-        the filter effect.
-
-       <p> For non-SVG cases <a href="#FillPaint">FillPaint</a> generates a
-        transparent black image.
-
-       <p class=issue> Consider whether this should be e.g the <span
-        class=term>bounding client rect filled with the current color, or if
-        it makes sense to use the ‘<code class=property>fill</code>’
-        property for this case too. </span>
-
-       <p class="note authoring">Note that text is generally painted filled,
-        not stroked.
-
-       <p> The <a href="#FillPaint">FillPaint</a> image has conceptually
-        infinite extent. Frequently this image is opaque everywhere, but it
-        might not be if the "paint" itself has alpha, as in the case of a
-        gradient or pattern which itself includes transparent or
-        semi-transparent parts.
+        the filter effect. The <a href="#FillPaint">FillPaint</a> image has
+        conceptually infinite extent. Frequently this image is opaque
+        everywhere, but it might not be if the "paint" itself has alpha, as
+        in the case of a gradient or pattern which itself includes
+        transparent or semi-transparent parts.
 
       <dt id=StrokePaint><span class=attr-value>StrokePaint</span>
 
       <dd>
-       <p> This keyword represents the target element <i>rendered
-        stroked</i>.
-
-       <p> For svg this keyword represents the value of the <a class=property
+       <p> This keyword represents the value of the <a class=property
         href="http://www.w3.org/TR/2011/REC-SVG11-20110816/painting.html#StrokeProperty">‘<code
-        class=property>stroke</code>’</a> on the target element for the
-        filter effect.
-
-       <p> For non-SVG cases <a href="#StrokePaint">StrokePaint</a> generates
-        a transparent black image.
-
-       <p class=issue>Consider whether this should be e.g the <span
-        class=term>bounding client rect filled with the one of the border
-        colors, or if it makes sense to use the ‘<code
-        class=property>stroke</code>’ property for this case too. </span>
-
-       <p class="note authoring">Note that text is generally painted filled,
-        not stroked.
-
-       <p> The <a href="#StrokePaint">StrokePaint</a> image has conceptually
-        infinite extent. Frequently this image is opaque everywhere, but it
-        might not be if the "paint" itself has alpha, as in the case of a
-        gradient or pattern which itself includes transparent or
-        semi-transparent parts.
+        class=property>stroke</code>’</a> property on the target element
+        for the filter effect. The <a href="#StrokePaint">StrokePaint</a>
+        image has conceptually infinite extent. Frequently this image is
+        opaque everywhere, but it might not be if the "paint" itself has
+        alpha, as in the case of a gradient or pattern which itself includes
+        transparent or semi-transparent parts.
      </dl>
 
      <p><span class=anim-target>Animatable: yes.</span>
