@@ -1,5 +1,8 @@
 Changes for Filter Effects specification
 ----------------------------------------
+2012-11-07  Dirk Schulze  <dschulze@adobe.com>
+- Use 'fill' and 'stroke' property for FillPaint and StrokePaint on HTML elements.
+
 2012-11-06  Dirk Schulze  <dschulze@adobe.com>
 - Add interface defintion for feDropShadow.
 
